# waypoint

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  GUARANTEES.md  LICENSE  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  requirements-treesitter.txt  requirements.txt  tag_map.yaml  waypoint.config.yaml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
detectors/: doctor.sh  gen_schema_infra.py  install.sh  install_codeql.sh  merge_sarif.py  run_all.sh  run_codeql.sh  run_logic.sh  sariflib.py
dispatch/: fallback_dispatcher.py
docs/: DECISIONS.md  PLAN.md  VALIDATION.md
examples/: demo.sh
hazards/: README.md  eval-exec.md  idor.md  py-async-shared-mutable.md  py-concurrency-primitive.md  react-effect-async-no-cleanup.md  react-setstate-in-async.md  redos.md  rust-concurrency-primitive.md  rust-static-mut.md  rust-unsafe-send-sync.md  sql-string-build.md  ts-promise-all-shared.md
infra/: README.md
prioritise/: calibration.py  callgraph.py  coverage.py  deploy_readiness.py  emit_beacons.py  gate.py  incremental.py  rank.py  suppress.py  treesitter_graph.py
samples/: README.md
samples/monorepo/rust_service/: Cargo.toml
samples/monorepo/rust_service/src/: exec.rs  hardening2.rs  hardening_samples.rs  lib.rs  logic_samples.rs  loops.rs  main.rs  state.rs  taint_samples.rs
schema-infra/: INDEX.md  README.md
suppression/: allowlist.yaml
tests/: conftest.py  test_calibration.py  test_callgraph.py  test_codeql_ingest.py  test_coverage.py  test_emit.py  (+11 more)
(+335 files in other folders)
